--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
 </head>
 <body>
 <div class="holder">
-  <div class="preloader"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+  <div class="loader"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
 </div>
 <div class="ThePage">
+<h1>Havishay Cloud</h1>
+  <p>This Site Is Under Progress...</p>
+</div>
 <script>
-var myVar;
+  var myVar;
 
 function myFunction() {
   myVar = setTimeout(showPage, 3000);
 }
 
 function showPage() {
-  document.getElementById("preloader").style.display = "none";
+  document.getElementById("loader").style.display = "none";
   document.getElementById("ThePage").style.display = "block";
 }
 </script>
