--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://havishay-cloud.github.io/style.css">
+<link rel="icon" href="https://havishay-cloud.github.io/cloud-icon.ico">
 </head>
 <body>
-<div class="holder">
-  <div class="loader"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-</div>
-<div class="ThePage">
-<h1>Havishay Cloud</h1>
-  <p>This Site Is Under Progress...</p>
-</div>
-<script>
-  var myVar;
-
-function myFunction() {
-  myVar = setTimeout(showPage, 3000);
-}
-
-function showPage() {
-  document.getElementById("loader").style.display = "none";
-  document.getElementById("ThePage").style.display = "block";
-}
-</script>
+</div class="header">
+<h1 id="main">Havishay Cloud</h1>
+<div>
 </body>
 </html>
