--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://havishay-cloud.github.io/style.css">
-<link rel="icon" href="https://havishay-cloud.github.io/cloud-icon.ico">
+<link rel="icon" href="https://havishay-cloud.github.io/site-icon.ico">
 </head>
 <body>
 </div class="header">
