--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </div class="header">
 <h1 id="main">Havishay Cloud</h1>
 <div>
+  <p id="infop">With Over 500 Users, We Are Growing fast, And smoothly And Securely...</p>
+  <p id="infop2">Join The Tour <a href="https://havishay-cloud.github.io/join.html">Here!</p>
 </body>
 </html>
