--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <link rel="icon" href="https://havishay-cloud.github.io/site-icon.ico">
 </head>
 <body>
-</div class="header">
+<div class="header">
 <h1 id="main">Havishay Cloud</h1>
-<div>
+</div>
   <p id="infop">With Over 500 Users, We Are Growing fast, And smoothly And Securely...</p>
   <p id="infop2">Join The Tour <a href="https://havishay-cloud.github.io/join.html">Here!</p>
 </body>
