--- a/upload.html
+++ b/upload.html
@@ -24,4 +24,5 @@
   </body>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
+<script src="https://havishay-cloud.github.io/script.js">
 </html>
