--- a/upload.html
+++ b/upload.html
@@ -23,8 +23,21 @@
      <h1>Upload Your Files</h1>
    </div>
    <p id="mainpara">Upload your files, Without any cost, safe and secure for lifetime... View An Example <a href="https://firebasestorage.googleapis.com/v0/b/uploadsfromsite.appspot.com/o/HAVISHAY-CLOUD.JPEG?alt=media&token=fafaf9bb-de59-4c5b-af5c-4aff77a53ca1">Here</a></p>   
-  </body>
+  
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
-<script src="https://havishay-cloud.github.io/script.js">
+<script>
+  var firebaseConfig = {
+    apiKey: "AIzaSyAQP3LepTFSgBhm0YXD5eH-Z9fnIPEQB9s",
+    authDomain: "uploadsfromsite.firebaseapp.com",
+    projectId: "uploadsfromsite",
+    storageBucket: "uploadsfromsite.appspot.com",
+    messagingSenderId: "967966406196",
+    appId: "1:967966406196:web:f942c875bd8d59c69dfc61",
+    measurementId: "G-2F2RC5H250"
+  };
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+  </body>
 </html>
