--- a/upload.html
+++ b/upload.html
@@ -22,7 +22,7 @@
   <div class="header">
      <h1>Upload Your Files</h1>
    </div>
-   <p id="mainpara">Upload your files, Without any cost, safe and secure for lifetime... View An Example <a href="https://firebasestorage.googleapis.com/v0/b/uploadsfromsite.appspot.com/o/HAVISHAY-CLOUD.JPEG?alt=media&token=fafaf9bb-de59-4c5b-af5c-4aff77a53ca1">Here</a></p>   
+   <p id="mainpara">Upload your files, Without any cost, safe and secure for lifetime... View An Example <a href="https://havishay-cloud-users-uploaded-cdn-server12.s3.ap.cloud-object-storage.appdomain.cloud/sample-video-from-cdn-12.mp4">Here</a></p>   
   
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
