--- a/upload.html
+++ b/upload.html
@@ -1,22 +1,7 @@
 <html>
   <head>
     <title>Upload Your Files, Safe, Secure And For Lifetime!</title>
-    <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
-      .header {
-      padding: 60px;
-      text-align: center;
-      background: #1abc9c;
-      color: #ffffff;
-      font-size: 30px;
-     }
-      #mainpara{
-        font-family: Open Sans;
-        text-align: center;
-        color: #ffffff;
-      }
-    <style>
+    <link rel="stylesheet" href="https://havishay-cloud.github.io/upload.css">
     </head>
   <body>
       <div class="header">
