--- a/upload.html
+++ b/upload.html
@@ -8,5 +8,7 @@
      <h1>Upload Your Files</h1>
    </div>
    <p id="mainpara">Upload your files, Without any cost, safe and secure for lifetime... View An Example <a href="https://havishay-cloud-users-uploaded-cdn-server12.s3.ap.cloud-object-storage.appdomain.cloud/sample-video-from-cdn-12.mp4">Here</a></p>   
+  <button type="submit" id="upload-btn">C H O O S E  F I L E S</button>
+    <input type="file" name="No File Chosen">
   </body>
 </html>
